--- a/employee.html
+++ b/employee.html
@@ -25,7 +25,7 @@
     <option value="half-hour">نصف ساعة</option>
     <option value="quarter-morning">ربع يوم صباحًا</option>
     <option value="half-day">نصف يوم</option>
-    <option value="quarter-evening">ربع ساعة مساءً</option>
+    <option value="quarter-evening">ربع يوم مساءً</option>
   </select>
   <input type="date" id="leave-date" placeholder="تاريخ القيام بالإذن">
    <input type="text" id="request-reason" placeholder="سبب الإذن">
@@ -45,4 +45,5 @@
 
   <script type="module" src="employee.js"></script>
 </body>
+
 </html>
