--- a/employee.html
+++ b/employee.html
@@ -23,6 +23,7 @@
     <option value="casual">إجازة عارضة</option>
     <option value="annual">إجازة اعتيادية</option>
     <option value="half-hour">نصف ساعة</option>
+    <option value="hour">ساعة</option>
     <option value="quarter-morning">ربع يوم صباحًا</option>
     <option value="half-day">نصف يوم</option>
     <option value="quarter-evening">ربع يوم مساءً</option>
@@ -45,4 +46,5 @@
 
   <script type="module" src="employee.js"></script>
 </body>
+
 </html>
