--- a/balances.html
+++ b/balances.html
@@ -51,6 +51,26 @@
     button:hover {
       background-color: #0056b3;
     }
+     /* ✅ استجابة للموبايل */
+  @media screen and (max-width: 600px) {
+    .page-container {
+      padding: 15px;
+    }
+
+    h2 {
+      font-size: 18px;
+    }
+
+    th, td {
+      padding: 8px;
+      font-size: 12px;
+    }
+
+    button {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+
   </style>
 </head>
 <body>
@@ -103,4 +123,5 @@
     loadEmployeeBalances();
   </script>
 </body>
+
 </html>
