--- a/signup.html
+++ b/signup.html
@@ -85,7 +85,7 @@
     <h2>📝 تسجيل مستخدم جديد</h2>
     <input type="text" id="username" placeholder="الاسم الكامل" required />
     <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-    <input type="password" id="password" placeholder="كلمة المرور" required />
+    <input type="password" id="password" placeholder="كلمة المرور 6 ارقام" required />
     <input type="text" id="fileNumber" placeholder="رقم الملف" required />
     <input type="number" id="casual" placeholder="عدد الإجازات العارضة" required />
     <input type="number" id="annual" placeholder="عدد الإجازات الاعتيادية" required />
@@ -201,4 +201,5 @@
     });
   </script>
 </body>
+
 </html>
