--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <form id="loginForm">
     <h2>🔐 تسجيل الدخول</h2>
     <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-    <input type="password" id="password" placeholder="كلمة المرور" required />
+    <input type="password" id="password" placeholder="كلمة المرور 6 ارقام" required />
     <label>
       <input type="checkbox" id="rememberMe" /> تذكرني دائمًا
     </label>
@@ -206,4 +206,5 @@
 });
   </script>
 </body>
+
 </html>
